--- a/Website/css/content.css
+++ b/Website/css/content.css
@@ -1,45 +1,77 @@
 
-.service {
-  width: 150%;
-  height: 425px;
-  margin: 10px 0;
-  text-align: center;
-  border: 10px solid #ddd;
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease; }
-  .service .service-icon-box {
-    position: relative;
-    top: 100px;
-    display: inline-block;
-    margin-bottom: 5px;
-    padding: 10px;
-    background: Orange;
-    -webkit-transition: all 0.3s ease;
-    transition: all 0.3s ease; }
-    .service .service-heading {
-      position: relative;
-      top: 100px;
-      -webkit-transition: all 600ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
-      transition: all 600ms cubic-bezier(0.68, -0.55, 0.265, 1.55); }
-      .service .service-description {
-        width: 80%;
-        margin: 0 auto;
-        opacity: 0;
-        -webkit-transition: all 600ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
-        transition: all 600ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
-        -webkit-transform: scale(0);
-        -ms-transform: scale(0);
-        transform: scale(0); }
-        .service .service-icon-box > img.service-icon {
-          width: 250px; }
-          .service:hover {
-            border-color: #00a8ff; }
-            .service:hover .service-icon-box {
-              top: -30px; }
-              .service:hover .service-heading {
-                top: -30px; }
-                .service:hover .service-description {
-                  opacity: 1;
-                  -webkit-transform: scale(1);
-                  -ms-transform: scale(1);
-                  transform: scale(1); }
+.marketing-site-content-section {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+}
+
+.marketing-site-content-section .button.round {
+  border-radius: 5000px;
+  text-transform: uppercase;
+  margin-bottom: 0;
+}
+
+.marketing-site-content-section .marketing-site-content-section-img {
+  -webkit-align-self: center;
+      -ms-flex-item-align: center;
+              -ms-grid-row-align: center;
+          align-self: center;
+  -webkit-flex: 1 0 100%;
+      -ms-flex: 1 0 100%;
+          flex: 1 0 100%;
+}
+
+.marketing-site-content-section .marketing-site-content-section-img img {
+  width: 100%;
+}
+
+@media screen and (min-width: 40em) {
+  .marketing-site-content-section .marketing-site-content-section-img {
+    -webkit-flex: 1 0 50%;
+        -ms-flex: 1 0 50%;
+            flex: 1 0 50%;
+  }
+}
+
+.marketing-site-content-section .marketing-site-content-section-block {
+  padding: 1rem;
+  -webkit-flex: 1 0 100%;
+      -ms-flex: 1 0 100%;
+          flex: 1 0 100%;
+  -webkit-align-self: stretch;
+      -ms-flex-item-align: stretch;
+          align-self: stretch;
+  background: #e6e6e6;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-align-items: flex-start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+@media screen and (min-width: 40em) {
+  .marketing-site-content-section .marketing-site-content-section-block {
+    -webkit-flex: 1 0 50%;
+        -ms-flex: 1 0 50%;
+            flex: 1 0 50%;
+    padding: 2rem;
+  }
+}
+
+.marketing-site-content-section-block-header {
+  font-size: 24px;
+}
+
+.marketing-site-content-section-block-subheader {
+  font-size: 13px;
+}
