--- a/Website/Multi-Media/css/content.css
+++ b/Website/Multi-Media/css/content.css
@@ -1,77 +1,16 @@
 
-.marketing-site-content-section {
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-flex-wrap: wrap;
-      -ms-flex-wrap: wrap;
-          flex-wrap: wrap;
-}
-
-.marketing-site-content-section .button.round {
-  border-radius: 5000px;
-  text-transform: uppercase;
-  margin-bottom: 0;
-}
-
-.marketing-site-content-section .marketing-site-content-section-img {
-  -webkit-align-self: center;
-      -ms-flex-item-align: center;
-              -ms-grid-row-align: center;
-          align-self: center;
-  -webkit-flex: 1 0 100%;
-      -ms-flex: 1 0 100%;
-          flex: 1 0 100%;
-}
-
-.marketing-site-content-section .marketing-site-content-section-img img {
+.fullscreen-image-slider .orbit-image {
   width: 100%;
+  height: 100vh;
 }
 
-@media screen and (min-width: 40em) {
-  .marketing-site-content-section .marketing-site-content-section-img {
-    -webkit-flex: 1 0 50%;
-        -ms-flex: 1 0 50%;
-            flex: 1 0 50%;
-  }
-}
-
-.marketing-site-content-section .marketing-site-content-section-block {
-  padding: 1rem;
-  -webkit-flex: 1 0 100%;
-      -ms-flex: 1 0 100%;
-          flex: 1 0 100%;
-  -webkit-align-self: stretch;
-      -ms-flex-item-align: stretch;
-          align-self: stretch;
-  background: #e6e6e6;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-flex-direction: column;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-align-items: flex-start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-}
-
-@media screen and (min-width: 40em) {
-  .marketing-site-content-section .marketing-site-content-section-block {
-    -webkit-flex: 1 0 50%;
-        -ms-flex: 1 0 50%;
-            flex: 1 0 50%;
-    padding: 2rem;
-  }
-}
-
-.marketing-site-content-section-block-header {
-  font-size: 24px;
-}
-
-.marketing-site-content-section-block-subheader {
-  font-size: 13px;
+.fullscreen-image-slider .orbit-caption {
+  bottom: 50%;
+  -webkit-transform: translateY(50%);
+  -ms-transform: translateY(50%);
+  transform: translateY(50%);
+  background: none;
+  text-align: center;
+  color: #fefefe;
+  font-weight: bold;
 }
